--- a/style.css
+++ b/style.css
@@ -3,124 +3,154 @@
 */
 
 :root {
-    --light-yellow: #FED52A;
-    --light-grey: #989999;
-    --light-green: #F2FEDC;
+    --light-pink: #FFEDCB;
+}
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 body {
     font-family: Ubuntu, 'sans-serif';
+    width: 1440px;
     font-size: 17px;
     line-height: 2rem;
-    background-color: var(--light-green);
+    background-color: #F0F6EF;
 }
 
-.container {
+.wrapper {
     display: flex;
     flex-direction: column;
-    max-width: 60vw;
-    padding: 1rem;
+    max-width: 1000px;
+    align-items: center;
+    justify-content: space-between;
     margin: 0 auto;
 }
+
+/*Markup of base elements*/
+h1 {
+    font-size: 2rem;
+    line-height: 2rem;
+    padding: 0.5rem;
+}
+
+h2 {
+    font-size: 1.3rem;
+    padding: 0.5rem;
+}
+
+h3 {
+    border-bottom: 3px solid #000;
+    padding: 0.1rem;
+}
+
+ul {
+    padding-bottom: 1rem;
+}
+
+a {
+    text-decoration: underline;
+    color: #000;
+    cursor: pointer;
+}
+
+a:hover {
+    color: #F60C3A;
+    transition: all 0.3s ease-in-out;
+}
+
+mark {
+    background-color: #F0F6EF;
+    font-weight: 800;
+}
+
+/*Header*/
+
+.header__content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 925px;
+    padding: 1rem 0 0 0;
+}
+
+.header__name {
+    flex: 1;
+}
+
+.header__about {
+    flex: 2;
+    font-size: 1.05rem;
+    line-height: 1.8rem;
+    padding-left: 6rem;
+}
+
+.header__img {
+    border-radius: 50%;
+    border: none;
+    max-width: 15vw;
+}
+
+/*Main*/
 
 section {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-content: stretch;
+    width: 100%;
+    padding: 1rem;
 }
 
 section > div {
     flex: 2;
-    padding: 0.5rem;
-    margin: 0.5rem;
-}
-
-section > div > h3 {
-    border-bottom: 0.3rem solid #000;
-    padding: 0.1rem;
-}
-
-.yellow-circle {
-    background-color: var(--light-yellow);
-    position: absolute;
-    z-index: -50;
-    width: calc(100% / 4);
-    height: calc(100% / 1.2);
-    border-radius: 100% 0 0 100% / 50% 0 0 50%;
-    margin-top: calc(15% - 0.8rem);
-    right: calc(50% - 0.8rem);
-}
-
-.grey-circle {
-    background-color: var(--light-grey);
-    opacity: .8;
-    position: absolute;
-    z-index: -60;
-    width: calc(100% / 4);
-    height: calc(100% / 1.2);
-    border-radius: 0 100% 100% 0 / 0 50% 50% 0;
-    left: calc(50% - 0.8rem);
-    top: calc(50% - 0.8rem);
-}
-
-.header-name > h1 {
-    font-size: 2.5rem;
-    line-height: 3rem;
-}
-
-.header-summary {
-    font-size: 1.05rem;
-    line-height: 1.8rem;
     padding: 1.5rem;
 }
 
-a {
-   text-decoration: none;
-   color: #000;
-   cursor: pointer;
+.education > p {
+    padding-bottom: 1rem;
 }
 
-a:hover {
-    color: #C3A538;
-    font-size: 1.3rem;
-}
-
-.code-example-block {
+.code-example {
     font-size: 0.9rem;
 }
 
-
-@media (max-width: 768px) {
-    section{
-      display: initial;
-    }
-    
-    .grey-circle{
-        display: none;
-    }
-    
-    .yellow-circle {
-        width: 100%;
-        height: 100%;
-        border-radius: 50%;
-    }
-    
-    code {
-        font-size: calc(100% - 0.2rem);
-        text-wrap: normal;
-    }
-
+.footer__wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 925px;
+    padding: 0 0 1rem 0;
 }
 
-@media (max-width: 425px) {
-    .container {
-        display: flex;
-        flex-direction: column;
-        max-width: 90vw;
-        margin: 0 auto;
-        padding: 0.5rem;
-    }
+.logo__rs {
+    display: flex;
+    flex-direction: column;
 }
 
+.logo__img {
+    width: 110px;
+}
+
+.img{
+    width: 100%;
+}
+
+.icons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.icon {
+    font-size: 2rem;
+    padding: 0 0 0 1rem;
+}
+
+.icon:hover {
+    color: #F60C3A;
+    transition: all 0.3s ease-in-out;
+}
 
